--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>com.github.sarnowski</groupId>
     <artifactId>TypeSafe-couchdb</artifactId>
-    <version>0.1.0</version>
+    <version>0.2-SNAPSHOT</version>
 
     <name>TypeSafe-couchdb</name>
 
